# project

./: .gitignore  .rosinstall  BCLOUD  _setup_util.py  build.sh  computer.sh  control.sh  ros.md5  sed_ros_before_use_ros.sh  setup.sh
env/: init_env.sh  vimrc
env/.ssh/: id_rsa
env/tools/: bash_aliases  install_bcloud.sh  install_comake2.sh  mybatchkill  mybatchrename  mydiffdir  myorders  pwdftp  pwdscp  vimrc
etc/ros/: config_comm.yaml  metric.config  monitor.conf  proto.list
include/actionlib/: TestAction.h  TestActionFeedback.h  TestActionGoal.h  TestActionResult.h  TestFeedback.h  TestGoal.h  TestRequestAction.h  TestRequestActionFeedback.h  TestRequestActionGoal.h  TestRequestActionResult.h  TestRequestFeedback.h  TestRequestGoal.h  TestRequestResult.h  TestResult.h  TwoIntsAction.h  TwoIntsActionFeedback.h  TwoIntsActionGoal.h  TwoIntsActionResult.h  TwoIntsFeedback.h  TwoIntsGoal.h  TwoIntsResult.h
include/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
include/bond/: Constants.h  Status.h
include/car_sec/: ros_export.h  sec_comm.h  sec_util.h
include/common_pb_msgs/: Point3D.h  PointENU.h  PointLLH.h  Quaternion.h
include/compressed_depth_image_transport/: CompressedDepthPublisherConfig.h
include/compressed_image_transport/: CompressedPublisherConfig.h  CompressedSubscriberConfig.h
include/control_msgs/: FollowJointTrajectoryAction.h  FollowJointTrajectoryActionFeedback.h  FollowJointTrajectoryActionGoal.h  FollowJointTrajectoryActionResult.h  FollowJointTrajectoryFeedback.h  FollowJointTrajectoryGoal.h  FollowJointTrajectoryResult.h  GripperCommand.h  GripperCommandAction.h  GripperCommandActionFeedback.h  GripperCommandActionGoal.h  GripperCommandActionResult.h  GripperCommandFeedback.h  GripperCommandGoal.h  GripperCommandResult.h  JointControllerState.h  JointTolerance.h  JointTrajectoryAction.h  JointTrajectoryActionFeedback.h  JointTrajectoryActionGoal.h  JointTrajectoryActionResult.h  JointTrajectoryControllerState.h  JointTrajectoryFeedback.h  JointTrajectoryGoal.h  JointTrajectoryResult.h  PointHeadAction.h  PointHeadActionFeedback.h  PointHeadActionGoal.h  PointHeadActionResult.h  PointHeadFeedback.h  PointHeadGoal.h  PointHeadResult.h  QueryCalibrationStateRequest.h  QueryCalibrationStateResponse.h  QueryTrajectoryStateRequest.h  QueryTrajectoryStateResponse.h  (+7 more)
lib/: libflycapture2bridge.so.3  liboctomap.so.1.6.9  liboctomath.so.1.6.9  liborocos-kdl.so.1.3.0  libpcl_common.so.1.7  libstage.so.4.1.1  libtriclops.so.3  libzookeeper_mt.la  libzookeeper_mt.so.2  libzookeeper_st.la  libzookeeper_st.so.2.0.0
mine/cplus/practice/caffe_02_show/: CMakeLists.txt
mine/cplus/practice/caffe_02_show/inc/: macros.h  noncopyable.h  object_set.h  pcl_util.h  string_util.h  test.h
mine/cplus/practice/caffe_02_show/src/: file_util.cpp  object_set.cpp  pcd_file_util.cpp  string_util.cpp  test.cpp
mine/cplus/practice/gtest_02_test/test/: CMakeLists.txt
mine/cplus/practice/protobuf_01_test/: CMakeLists.txt
mine/cplus/practice/protobuf_01_test/proto/: CMakeLists.txt  people.proto
mine/cplus/practice/protobuf_01_test/src/: test.cpp
share/localization_pb_msgs/: package.xml
share/localization_pb_msgs/cmake/: localization_pb_msgs-msg-extras.cmake  localization_pb_msgs-msg-paths.cmake  localization_pb_msgsConfig.cmake
share/localization_pb_msgs/msg/: LocalizationEstimate.msg  Pose.msg  Uncertainty.msg
share/math_util/: package.xml
share/math_util/cmake/: math_utilConfig.cmake
share/message_transport/: package.xml
share/message_transport/cmake/: message_transportConfig.cmake
share/metric_msgs/: package.xml
share/metric_msgs/cmake/: metric_msgs-msg-extras.cmake  metric_msgs-msg-paths.cmake  metric_msgsConfig.cmake
share/metric_msgs/msg/: MetricStatus.msg  RosMetric.msg
share/metric_msgs/srv/: Metric.srv
share/msg_util/: package.xml
share/msg_util/cmake/: msg_utilConfig.cmake
share/pbmsg_generator/: CMakeLists.txt.in  package.xml  package.xml.in
share/pbmsg_generator/cmake/: pbmsg_generatorConfig.cmake
share/roslibmetric/: package.xml
share/roslibmetric/cmake/: roslibmetricConfig.cmake
share/rosmetric/: config.yaml  package.xml
share/rosmetric/cmake/: rosmetricConfig.cmake
share/rosmetric/launch/: start_metric.launch
share/rosmonitor/: package.xml
share/rosmonitor/cmake/: rosmonitorConfig.cmake
share/rosmonitor/conf/: monitor.conf
share/sharedmem_transport/: package.xml
share/sharedmem_transport/cmake/: sharedmem_transportConfig.cmake
share/velodyne/: package.xml
share/velodyne/cmake/: velodyneConfig.cmake
share/velodyne/launch/: 32e_cloud.launch  32e_cloud_pcap.launch  64e_s2_cloud.launch  64e_s3_cloud.launch  export_fusion_pcd.launch  export_pcd_for_bmw.launch  filter.launch  fusion_pcap.launch  fusion_pcap_test.launch  preprocess_legacy_bag.launch  replay.launch  replay_with_compensator.launch  replay_with_old_bag.launch  scan_msg_transform.launch  start_velodyne.launch  vlp16_cloud.launch  vlp16_cloud_pcap.launch
share/velodyne_driver/: package.xml
share/velodyne_driver/cmake/: velodyne_driverConfig.cmake
share/velodyne_driver/launch/: driver_nodelet.launch  nodelet_manager.launch
share/velodyne_pointcloud/: nodelets.xml  package.xml
share/velodyne_pointcloud/cmake/: velodyne_pointcloudConfig.cmake
share/velodyne_pointcloud/launch/: cloud_nodelet.launch  compensator_save_nodelet.launch  filter_nodelet.launch  fusion_nodelet.launch  fusion_test_nodelet.launch  pointcloud_save_nodelet.launch  poll_and_publish_packets.launch  poll_and_publish_pointclouds.launch  republish_for_fusion_test_nodelet.launch  rosbag_replay_pcap_bag.launch  scan_msg_transform_nodelet.launch
share/velodyne_pointcloud/params/: velodyne_novatel_extrinsics_bmw8.yaml  velodyne_novatel_extrinsics_bmw9.yaml
share/velodyne_pointcloud/tests/: 64e_s2_compensator_rosbag.test  64e_s2_end_to_end_rosbag.test  64e_s2_pointcloud_pcap.test  unit_test_dupcl_filter.cpp  unit_test_pcl_filter.cpp  unit_test_rawdata.cpp  velodyne_unit_test.h  verify_compensator.cpp  verify_pointcloud.cpp
zookeeper/: setenv.sh
(+2031 files in other folders)
