<package>
<name>localization_pb_msgs</name>
  <version>0.5.10</version>
  <description>
    Protobuf messages for debug tools.
  </description>
  <maintainer email="hewei03@baidu.com">hewei03</maintainer>
  <license>BSD</license>

  <author email="hewei03@baidu.com">hewei03</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
<build_depend>header_pb_msgs</build_depend>
<run_depend>header_pb_msgs</run_depend>
<build_depend>common_pb_msgs</build_depend>
<run_depend>common_pb_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
