<?xml version="1.0"?>
<package>
  <name>message_transport</name>
  <version>1.0.0</version>
  <description>The message_transport package</description>
  <maintainer email="jonas.sticha@bmw-carit.de">Jonas Sticha</maintainer>
  <license>BSD</license>
  <author email="jonas.sticha@bmw-carit.de">Jonas Sticha</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pluginlib</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>message_filters</run_depend>

  <export>
  </export>

</package>
