<?xml version="1.0"?>
<package>
  <name>metric_msgs</name>
  <version>0.0.0</version>
  <description>The metric_msgs package</description>

  <maintainer email="mayu01@baidu.com">mayu01</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/metric_msgs</url> -->
  <author email="mayu01@baidu.com">mayu01</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    <architecture_independent/>
  </export>
</package>
