<?xml version="1.0"?>
<package>
  <name>msg_util</name>
  <license>TODO</license>
  <version>1.0.0</version>
  <description>The msg_util package</description>
  <maintainer email="fengkaiwen01@baidu.com">work</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>