<?xml version="1.0"?>
<package>
  <name>pbmsg_generator</name>
  <version>0.0.0</version>
  <description>Tools used to generate ros message project from proto files.</description>

  <maintainer email="hewei03@baidu.com">none</maintainer>
  <license>NULL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
