<package>
  <name>roslibmetric</name>
  <version>0.0.1</version>
    <description>
	    This is a continuous self-testing framework.
		    It is intended to be high performance and stability.
			  </description>
  <maintainer email="caros@baidu.com">caros</maintainer>
  <license>BSD</license>

  <author>mayu01</author>
  <author>hewei03</author>
  <author>wanghaifeng03</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend version_gte="0.3.17">cpp_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend version_gte="0.3.17">roscpp_traits</build_depend>
  <build_depend version_gte="1.10.3">rosgraph_msgs</build_depend>
  <build_depend>metric_msgs</build_depend>
  <build_depend>roslang</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xmlrpcpp</build_depend>

  <run_depend version_gte="0.3.17">cpp_common</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend version_gte="0.3.17">roscpp_traits</run_depend>
  <run_depend version_gte="1.10.3">rosgraph_msgs</run_depend>
  <run_depend>metric_msgs</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xmlrpcpp</run_depend>

  <test_depend>rosunit</test_depend>
</package>
