<package>
  <name>rosmetric</name>
  <version>1.0.0</version>
  <description>
    This is a continuous self-testing framework.
    It is intended to be high performance and stability. 
  </description>
  <maintainer email="caros@baidu.com">caros</maintainer>
  <license>BAIDU</license>

  <author>Mayu</author>
  <author>Wanghaifeng</author>
  <author>Hewei</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>python-imaging</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_depend>metric_msgs</build_depend>
  <build_depend>message_generation</build_depend>  
  <build_depend>metric_msgs</build_depend>  

  <run_depend>boost</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>genpy</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>xmlrpcpp</run_depend>
  <run_depend>metric_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>metric_msgs</run_depend>  
</package>
