<?xml version="1.0"?>
<package>
  <name>rosmonitor</name>
  <version>0.0.0</version>
  <description>The 3rd party library</description>

  <maintainer email="mayu01@baidu.com">none</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
