<?xml version="1.0"?>
<package>
  <name>sharedmem_transport</name>
  <version>1.0.0</version>
  <description>The sharedmem_transport package</description>
  <maintainer email="fengjingchao@baidu.com">Jingchao Feng</maintainer>
  <license>BSD</license>
  <author email="xialiming@baidu.com">Liming Xia</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>message_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
</package>
