<package>

  <name>velodyne</name>
  <version>1.0.0</version>
  <description>
    Basic ROS support for the Velodyne 3D LIDARs.
  </description>
  <maintainer email="car-os@todo.todo">car-os</maintainer>
  <author> dengchengliang</author>
  <license>Todo</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>velodyne_driver</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>

</package>
