<package>

  <name>velodyne_driver</name>
  <version>1.2.0</version>
  <description>
    ROS device driver for Velodyne HDL-64E, and HDL-32 LIDARs.
  </description>
  <maintainer email="car-os@todo.todo">car-os</maintainer>
  <author>liubocong</author>
  <author>dengchengliang</author>
  <author>fengkaiwen01</author>
  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>libpcap</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>time_util</build_depend>
  <build_depend>math_util</build_depend>

  <!-- these build dependencies are only needed for unit testing -->
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>libpcap</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>time_util</run_depend>
  <run_depend>math_util</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_velodyne.xml"/>
  </export>

</package>
