CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(demo)

ADD_DEFINITIONS(-DPCL_NO_PRECOMPILE)
ADD_DEFINITIONS(-DCPU_ONLY)
ADD_DEFINITIONS(-DUSE_LEVELDB=1)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
INCLUDE(${PROJECT_SOURCE_DIR}/../../cmake/Packages.cmake)

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})
#ADD_LIBRARY(${PROJECT_NAME} ${DIR_SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_THIRD_LIBS})

#ADD_SUBDIRECTORY(test)
