CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(demo_test)

ADD_DEFINITIONS(-Dprotected=public -Dprivate=public -DUNIT_TEST)

MESSAGE(PROJECT_SOURCE_DIR_TEST ${PROJECT_SOURCE_DIR})
#INCLUDE_DIRECTORIES(../inc)
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/../src DIR_SRCS)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/. DIR_SRCS)
#INCLUDE(../../../cmake/Packages.cmake)
ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})

SET(PROJECT_THIRD_LIBS ${PROJECT_THIRD_LIBS} demo)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_THIRD_LIBS})
