CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#PROJECT(demo_proto)

#INCLUDE(${PROJECT_SOURCE_DIR}/../../../cmake/Packages.cmake)

FILE(GLOB PROTO_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HEADERS ${PROTO_FILES})

#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
#ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})
ADD_LIBRARY(${PROTO_NAME} ${PROTO_SRCS})

#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_THIRD_LIBS})
#SET(PROJECT_THIRD_LIBS ${PROJECT_THIRD_LIBS} ${PROJECT_NAME})

#ADD_SUBDIRECTORY(test)
#MESSAGE(HELLO ${PROTO_HEADERS})

# we include .h here, cant't affect father dir, cmake's property
#INCLUDE_DIRECTORIES(${PROTO_HEADERS})
